--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.5.7' //springdoc을 통한 Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' //springdoc을 통한 Swagger
 }
 
 tasks.named('test') {
