--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,5 +15,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         hbm2ddl:
-          auto: none #설정 잘 바꿔주기. 웬만하면 update로
+          auto: update #설정 잘 바꿔주기. 웬만하면 update로
         default_batch_fetch_size: 1000
