--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://52.78.221.55:3306/ouchdb_ver0?serverTimezone=Asia/Seoul
-    username: test
-    password: ouch
+    #    url: jdbc:mysql://52.78.221.55:3306/ouchdb_ver0?serverTimezone=Asia/Seoul
+    #    username: test
+    #    password: ouch
+    url: jdbc:mysql://localhost/ouch_db
+    username: "root"
+    password: ""
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
     init:
@@ -17,3 +20,5 @@ spring:
         hbm2ddl:
           auto: update #설정 잘 바꿔주기. 웬만하면 update로
         default_batch_fetch_size: 1000
+server:
+  port: 8085
