--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ java {
 	}
 }
 
-//configurations {
-//	compileOnly {
-//		extendsFrom annotationProcessor
-//	}
-//}
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 
 repositories {
 	mavenCentral()
@@ -37,6 +37,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// queryDSL
+	/*
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
@@ -44,6 +45,7 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' //springdoc을 통한 Swagger
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	 */
 
 	/* Q클래스 생성
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
