--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,15 @@ dependencies {
 
 	// 스웨거 의존성
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+    // 스프링 시큐리티
+	implementation "org.springframework.boot:spring-boot-starter-security"
+
+    //jwt 토큰
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
 }
 
 tasks.named('test') {
